--- a/public/back/css/common.css
+++ b/public/back/css/common.css
@@ -1,6 +1,22 @@
-body {
-    background-color: #222d32;
-}
+a {
+    color: #333;
+  }
+  /* lvha */
+  a:link,
+  a:visited,
+  a:hover,
+  a:active {
+    text-decoration: none;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  .red {
+    color: #A94442;
+  }
+
 
 
 .login .header {
@@ -12,4 +28,117 @@ body {
     height: 40px;
     line-height: 40px;
     text-align: center;
+}
+
+
+/*                 主页       */
+.side {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 180px;
+    height: 100%;
+    background-color: #222D32;
+    z-index: 99;
+    transition: all 1s;
+}
+.side.hiding {
+    left: -180px;
+}
+.side .brand a {
+    display: block;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: #367FA9;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+}
+.side .nav a.current {
+    background-color: #1D1F21;
+    border-left: 3px solid #069;
+  }
+
+/*                 User */
+.user {
+    height: 180px;
+    padding-top: 30px;
+    text-align: center;
+}
+.user img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%
+}
+.user p {
+    line-height: 40px;
+    font-size: 20px;
+    color: #fff;
+}
+
+/*            nav        */
+.nav {
+    text-align: center;
+}
+.nav a {
+    display: block;
+    height: 40px;
+    line-height: 40px;
+    color: #fff;
+    border-left: 3px solid transparent;
+}
+.nav a.active {
+    background-color: #1D1F21;
+    border-left: 3px solid #069;
+}
+.nav a i {
+    margin-right: 5px;
+}
+
+/*                 主体     */
+.main {
+    height: 2000px;
+    padding-left: 180px;
+    margin-top: 50px;
+    transition: all 1s;
+}
+.main.hiding {
+    padding-left: 0;
+}
+.main .topbar {
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #3C8DBC;
+    padding-left: 180px;
+    transition: all 1s;
+}
+.topbar.hiding {
+    padding-left: 0px;
+  }
+.main .topbar a {
+    width: 50px;
+    line-height: 50px;
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+}
+
+.main .breadcrumb a {
+    color: #337AB7;
+}
+
+.main .echarts_left, 
+.main .echarts_right {
+  width: 48%;
+  height: 400px;
+} 
+
+.table > thead > tr > th,
+.table > tbody > tr > td {
+    text-align: center;
+    vertical-align: middle;
 }
